Moving keys in NLA tweak mode on offset action strip can break some bezier curves. #46037

Closed
opened 2015-09-07 11:33:43 +02:00 by Alexander Gavrilov · 4 comments

System Information

Fedora 21 64-bit

Blender Version

Broken: 2.75a

Short description of error

When editing an action via NLA tweak mode on a strip that is offset from the 'natural' location of the action on the timeline, moving keys can break certain shapes of curves by stretching some bezier handles to unreasonable length.

Exact steps for others to reproduce the error

  1. Load the attached file: testkeys.blend
  2. Grab the selected keys in the dopesheet and move them 1 frame to any side.
  3. Observe the curve radically change shape, with some handles stretching away into the distance.
  4. Undo, switch tweak to the non-offset strip, and try the same - this time the curve keeps correct shape.
**System Information** Fedora 21 64-bit **Blender Version** Broken: 2.75a **Short description of error** When editing an action via NLA tweak mode on a strip that is offset from the 'natural' location of the action on the timeline, moving keys can break certain shapes of curves by stretching some bezier handles to unreasonable length. **Exact steps for others to reproduce the error** 1. Load the attached file: [testkeys.blend](https://archive.blender.org/developer/F231111/testkeys.blend) 2. Grab the selected keys in the dopesheet and move them 1 frame to any side. 3. Observe the curve radically change shape, with some handles stretching away into the distance. 4. Undo, switch tweak to the non-offset strip, and try the same - this time the curve keeps correct shape.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Joshua Leung self-assigned this 2015-09-08 05:44:01 +02:00

This issue was referenced by c105c59bb4

This issue was referenced by c105c59bb4e00d88c688f63c699dc78c0be4592a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46037
No description provided.