Fix T46037: Moving keys in NLA tweak mode on offset actions results in Bezier handles getting stretched unreasonably

Patch by Alexander Gavrilov (angavrilov)

Reviewed by Joshua Leung (aligorith)